---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021.08.15
  Bugfixes:
    - Fix crash when changing Smart Splitter filters in multiplayer
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021.08.14
  Bugfixes:
    - Fix crash on game init due to error in Build Event refactor (power slugs)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021.08.14
  Locale:
    - Russian translations added (thanks Shadow_Man)
  Bugfixes:
    - Don't play "new objective" sound effect when completing Onboarding
    - Pipelines were not indestructible!
    - Add missing mined_sound on lookout tower
  Changes:
    - Foundation can be marked for deconstruction even with entities on top, but can't actually be mined until the obstacle is removed.
  Optimizations:
    - Build/Destroy event handler has been refactored to improve performance.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021.08.13
  Bugfixes:
    - Setting the technology multiplier to anything other than 1 would break MAM research
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021.08.12
  Bugfixes:
    - Fix that changing object scanner from the quickbar would leave a "zombie" ping.
    - Added the /clear-pings command to clear such zombie pings.
    - Note that this will also clear Corpse Finder pings so be sure to clean up first ;)
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021.08.12
  Bugfixes:
    - Most recipes in the Equipment Workshop did not correctly tick down the To Do List
  Changes: