@@ -17,6 +17,7 @@ Satisfactorio=Love Factorio? Love Satisfactory? Want to play both at once? Well 
 toggle-radiation=Turn radiation on/off. Radiation is a gameplay feature but is costly in UPS. Admin-only.
 respawn=Kills your character, allowing you to respawn. Handy if you somehow manage to get yourself stuck.
 clear-pings=Clear pings, in case they get stuck.
+get-hub-parts=Add the HUB Parts to your inventory. Use this if the HUB has been dismantled and you misplaced or lost the Parts.
 
 [controls]
 recipe-browser=Recipe browser
@@ -65,6 +66,8 @@ trash-slot-nuclear-waste=[img=item.__1__] [color=#2cd23f]__2__[/color] cannot be
 trash-slot-equipment=Hold Shift to trash equipment.
 radiation-enabled=__1__ enabled radiation calculations for the map.
 radiation-disabled=__1__ disabled radiation calculations for the map.
+get-hub-parts-already-got=You already have the [img=item.hub-parts] [color=#2cd23f]__ITEM__hub-parts__[/color].
+get-hub-parts-already-built=[img=entity.the-hub] [color=#2cd23f]The HUB[/color] has already been built.
 
 [recipe-name]
 x-from-y=__1__ from __2__
